# THRD-Protocol

./: 404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
about/: index.html
action-guide/communication/: index.html
action-guide/decision-making/: index.html
action-guide/dev-workflow/: index.html
action-guide/labels/: index.html
action-guide/onboarding/: index.html
changelog/: index.html
docs/: about.md  changelog.md  index.md  proposal.md
docs/action-guide/: communication.md  decision-making.md  dev-workflow.md  labels.md  onboarding.md
docs/ethics/: data-privacy.md  thrd-spirit.md
docs/getting-started/: welcome.md
docs/governance/: access-control.md  decision-making.md  lifecycle.md  maintainer-role.md  onboarding.md  welcome.md
docs/skills/: docs-standard.md  tech-stack.md
ethics/data-privacy/: index.html
ethics/thrd-spirit/: index.html
getting-started/onboarding/: index.html
governance/access-control/: index.html
governance/decision-making/: index.html
governance/lifecycle/: index.html
governance/maintainer-role/: index.html
governance/onboarding/: index.html
governance/welcome/: index.html
overrides/partials/: copyright.html
proposal/: index.html
search/: search_index.json
skills/communication/: index.html
skills/docs-standard/: index.html
skills/tech-stack/: index.html
